<?xml version="1.0" encoding="utf-8"?>
<layout>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.ProfileFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_appBar"
            android:layout_width="match_parent"
            android:layout_height="?android:attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageView_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:layout_marginStart="16dp"
                android:src="@drawable/ic_arrow_left_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/gilroy_semibold"
                android:gravity="center"
                android:text="@string/appbar_title_settings"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <LinearLayout
            android:id="@+id/linearLayout_userData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:weightSum="10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_appBar">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout_profileImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/imageView_profile_image"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:src="@drawable/ic_profile_pink"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView_editProfile"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="@string/settings_editProfile"
                    android:textColor="@color/colorAccent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/imageView_profile_image" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:layout_marginBottom="08dp"
                android:orientation="vertical"
                android:paddingStart="16dp"
                android:weightSum="16">

                <TextView
                    android:id="@+id/textView_fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/gilroy_semibold"
                    android:text="@string/settings_user_name"
                    android:textColor="@color/colorBlack"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/textView_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/settings_user_email"
                    android:textColor="@color/colorSettingsDetails"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textView_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/gilroy_medium"
                    android:text="@string/settings_phone"
                    android:textColor="@color/colorSettingsDetails"
                    android:textSize="14sp" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:id="@+id/view_border"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorBorder"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout_userData" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_settingsBlock_safety"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/view_border">

            <TextView
                android:id="@+id/textView_settingsBlock_safety"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/settings_settingsBlock_safety"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_settingsBlock_safety_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/settings_settingsBlock_safety_desc"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView_settingsBlock_safety"
                app:layout_constraintTop_toBottomOf="@+id/textView_settingsBlock_safety" />

            <View
                android:id="@+id/view_border_safety"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorBorder"
                app:layout_constraintTop_toBottomOf="@+id/textView_settingsBlock_safety_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_settingsBlock_privacySettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_settingsBlock_safety">

            <TextView
                android:id="@+id/textView_settingsBlock_privacySettings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/settings_settingsBlock_privacySettings"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_settingsBlock_privacySettings_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/settings_settingsBlock_privacySettings_desc"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView_settingsBlock_privacySettings"
                app:layout_constraintTop_toBottomOf="@+id/textView_settingsBlock_privacySettings" />

            <View
                android:id="@+id/view_border_privacySettings"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorBorder"
                app:layout_constraintTop_toBottomOf="@+id/textView_settingsBlock_privacySettings_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_settingsBlock_security"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_settingsBlock_privacySettings">

            <TextView
                android:id="@+id/textView_settingsBlock_security"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/settings_settingsBlock_security"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_settingsBlock_security_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/settings_settingsBlock_secutiry_desc"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView_settingsBlock_security"
                app:layout_constraintTop_toBottomOf="@+id/textView_settingsBlock_security" />

            <View
                android:id="@+id/view_border_security"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorBorder"
                app:layout_constraintTop_toBottomOf="@+id/textView_settingsBlock_security_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout_settingsBlock_service"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_settingsBlock_security">

            <TextView
                android:id="@+id/textView_settingsBlock_service"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/gilroy_semibold"
                android:text="@string/settings_settingsBlock_service"
                android:textColor="@color/colorBlack"
                android:textSize="16sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView_settingsBlock_service_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/settings_settingsBlock_service_desc"
                android:textSize="12sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/textView_settingsBlock_service"
                app:layout_constraintTop_toBottomOf="@+id/textView_settingsBlock_service" />

            <View
                android:id="@+id/view_border_service"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="16dp"
                android:background="@color/colorBorder"
                app:layout_constraintTop_toBottomOf="@+id/textView_settingsBlock_service_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/gilroy_semibold"
            android:text="@string/settings_signout"
            android:id="@+id/textView_signout"
            android:textColor="@color/colorRed"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_settingsBlock_service" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/shimmer_background"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintStart_toStartOf="parent"
            android:visibility="gone"
            android:background="@color/colorWhite"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_appBar"/>

        <com.facebook.shimmer.ShimmerFrameLayout
            android:id="@+id/shimmer_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/constraintLayout_appBar"
            app:shimmer_duration="1000">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <include layout="@layout/placeholder_profile_layout" />
                <include layout="@layout/placeholder_profile_layout" />
                <include layout="@layout/placeholder_profile_layout" />
                <include layout="@layout/placeholder_profile_layout" />
                <include layout="@layout/placeholder_profile_layout" />
                <include layout="@layout/placeholder_profile_layout" />
                <include layout="@layout/placeholder_profile_layout" />
            </LinearLayout>
            <include layout="@layout/placeholder_profile_layout" />
        </com.facebook.shimmer.ShimmerFrameLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
